# KC-Chain-M1

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  main.py  nixpacks.toml  railway.json  requirements.txt  server.py  setup_wallets.py  wallets.csv
.github/workflows/: ci.yml  deploy-railway.yml
config/: settings.py
contracts/: data_pipeline.py  lending_app.py  merchant_app.py  payment_app.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CI_PIPELINE.md  CONTRIBUTING.md  DATASETS.md  DEPLOYMENT.md  OPERATIONS.md  SECURITY.md  milestone-report.md
logs/: wallets.csv
smartcity-test/: README.md  docker-compose.yml  quick-start.sh
smartcity-test/docs/: METRICS.md  productContext.md  projectbrief.md
smartcity-test/lcore-node/: Cargo.toml  README.md  config.toml  nixpacks.toml
smartcity-test/lcore-node/api/: Cargo.toml
smartcity-test/lcore-node/api/src/: config.rs  lib.rs  middleware.rs  models.rs  server.rs
smartcity-test/lcore-node/api/src/handlers/: device_handler.rs  mod.rs  status_handler.rs
smartcity-test/lcore-node/device/: Cargo.toml
smartcity-test/lcore-node/device/src/: error.rs  lib.rs  manager.rs  types.rs
smartcity-test/lcore-node/encryption/: Cargo.toml
smartcity-test/lcore-node/encryption/src/: error.rs  lib.rs  service.rs  stage1.rs  stage2.rs  types.rs
smartcity-test/lcore-node/kc_chain/: Cargo.toml  MVPIoTProcessor.abi
smartcity-test/lcore-node/kc_chain/src/: client.rs  error.rs  lib.rs  types.rs
smartcity-test/lcore-node/src/: config.rs  error.rs  lib.rs  main.rs
smartcity-test/lcore-node/storage/: Cargo.toml
smartcity-test/lcore-node/storage/migrations/: 20240101000000_initial_schema.up.sql
smartcity-test/lcore-node/storage/src/: error.rs  lib.rs  models.rs  schema.rs  sqlite.rs
smartcity-test/stylus_contracts/: README.md
utils/: data_parsers.py  device_simulator.py  funding_helper.py  iot_metrics.py  lcore_client.py  metrics_logger.py  tx_builder.py  wallet_manager.py
