[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.9"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
anyhow = "1.0"
alloy-primitives = "0.8.25"

# Local dependencies
storage = { path = "../storage" }
encryption = { path = "../encryption" }
kc_chain = { path = "../kc_chain" }
base64 = "0.22.1"
sha2 = "0.10.8"

# ... rest of the file remains unchanged ... 

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"