[package]
name = "storage"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "sqlite", "macros" ] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] } 